buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'org.junit.platform:junit-platform-gradle-plugin:+'
    }
}

group = 'com.epam.javalab'
version = '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 8

repositories {
    mavenCentral()
    jcenter()
    mavenLocal()
}

apply plugin: 'org.junit.platform.gradle.plugin'

configurations {
    testCompile.extendsFrom compileOnly
}

// turns sout`ing on in tests:
test.testLogging.showStandardStreams = true

dependencies {
    compile 'org.springframework:spring-context:+',

            // AOP
            'org.aspectj:aspectjrt:+',
            'org.aspectj:aspectjweaver:+',
            'aopalliance:aopalliance:+',

            // JDBC
            'org.springframework:spring-jdbc:+',

            // ORM
            'org.springframework:spring-orm:+',
            'org.hibernate:hibernate-spatial:+',
            'org.hibernate:hibernate-validator:+',
            'org.hibernate:hibernate-java8:+',

            'org.apache.logging.log4j:log4j-slf4j-impl:+',
            'javax.xml.bind:jaxb-api:+',
            'io.vavr:vavr:+'

    compileOnly 'org.projectlombok:lombok:+',
            'edu.washington.cs.types.checker:checker-framework:+'

    testCompile 'org.junit.jupiter:junit-jupiter-params:+',
            'org.hamcrest:java-hamcrest:+',
            'org.mockito:mockito-core:+',
            'org.springframework:spring-test:+'

    testRuntime 'org.junit.jupiter:junit-jupiter-engine:+',
            // H2
            'com.h2database:h2:+'

    // To avoid compiler warnings about @API annotations in JUnit code
    testCompileOnly 'org.apiguardian:apiguardian-api:+'
}

// type in terminal: gradle wrapper --gradle-version=4.5.1
task wrapper(type: Wrapper) {
    description = 'Generates gradlew[.bat] scripts'
    gradleVersion = '4.5.1'
    distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
}
